<resources>
    <string name="app_name">Fragments</string>
    <string name="welcome_to_fragment1">Welcome to Fragment1</string>
    <string name="go_to_fragment_1">Go to Fragment 1</string>
    <string name="go_to_fragment_4">Go to Fragment 4</string>
    <string name="go_to_fragment_3">Go to Fragment 3</string>
    <string name="go_to_fragment_2">Go to Fragment 2</string>
    <string name="welcome_to_fragment2">Welcome to Fragment 2</string>
    <string name="welcome_to_fragment3">Welcome to Fragment 3</string>
    <string name="welcome_to_fragment4">Welcome to Fragment 4</string>
    <string name="go_to_second_activity">Go to second activity</string>
    <string name="welcome_to_second_activity">Welcome to the Second Activity</string>
</resources>
