<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:textSize="25sp"
        android:text="@string/welcome_to_fragment2"
        android:layout_marginTop="40dp"
        android:id="@+id/textTitle"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textTitle"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:id="@+id/btn_nav_frag1"
        android:text="@string/go_to_fragment_1"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_nav_frag1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:id="@+id/btn_nav_frag2"
        android:text="@string/go_to_fragment_2"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_nav_frag2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:id="@+id/btn_nav_frag3"
        android:text="@string/go_to_fragment_3"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_nav_frag3"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:id="@+id/btn_nav_second_activity"
        android:text="@string/go_to_second_activity"/>

</RelativeLayout>